--- a/finalProject/templates_chiu/index_1.html
+++ b/finalProject/templates_chiu/index_1.html
@@ -4,12 +4,16 @@
    <head>
       <meta charset = "utf-8">
       <title>尼蠔一絲閱讀器Index</title>
-      <link rel="icon" href="../images/icon.ico" type="image/x-icon">
+      <link rel="icon" href="icon128.ico" type="image/x-icon">
+      <link href="https://fonts.googleapis.com/css?family=Noto+Serif+TC&display=swap" rel="stylesheet">
       <style type = "text/css">
-      body{
-          background-color: #e1dcd9;
-          color: #A67F78;
+      *{
+        font-family: 'Noto Serif TC', serif;
       }
+        body{
+            background-color: #e1dcd9;
+            color: #A67F78;
+        }
         #divvv{
             width: 40%;
             margin: 0px auto;
@@ -31,6 +35,12 @@
             color: #A67F78;
             border: #A67F78 1px solid;
         }
+        .message
+        {
+            padding-left: 5%;
+            text-align: left;
+            color: red;
+        }
         img{
             height: 60%;
             width: 60%;
@@ -40,8 +50,11 @@
             float: left;
             width: auto;
             height: auto;
-            margin-top: 3%;
+            margin-top: 10px;
             margin-left: 5%;
+        }
+        input:focus{
+            outline: 1px #A67F78 solid;
         }
         /*
         .check+label{
@@ -62,13 +75,17 @@
             color: white;
         }*/
         .sub{
-            float:none;
+            float: none;
             width: 100px;
-            height:auto;
+            height: auto;
             border: 0px;
+            background-color: whitesmoke;
         }
         .sub:hover{
             background-color: #F1E0D6;
+        }
+        .sub:focus{
+            outline: 1px #A67F78 solid;
         }
      </style>
 
@@ -76,11 +93,18 @@
    <body>
         <br><br>
        <div id = "divvv">
-           <form method="POST" action={{ url_for('index') }}>
+           <form method="POST" action={{ url_for('login') }}>
                <span id = "tt">
                    <img src= "logo.png"></img>
                 <br>尼蠔一絲閱讀器</span>
                <hr style= "border: 0px; background-color: #A67F78; height: 3px;">
+               <!-- {% with messages = get_flashed_messages() %}
+                {% if messages %}
+                    {% for message in messages %}
+                        <p class="message">{{ message }}</p>
+                    {% endfor %}
+                {%endif%}
+                {% endwith %} -->
                 <label>
                <span class = "in">帳號</span><br>
                 <input type="text" id= "account"
@@ -98,7 +122,7 @@
                     <label for="rememberMe"></label>-->
                 <span style= "float: left;">記住我</span><br><br>
                 </label>
-                <input type="button" value="註冊" class="sub">
+                <input type="button" value="註冊" class="sub" onclick="{{url_for('register')}}">
                 <input type="submit" value="登入" class="sub">
                 <br><br>
            </form>
