--- a/finalProject/templates_chiu/index_1.html
+++ b/finalProject/templates_chiu/index_1.html
@@ -3,7 +3,7 @@
 <html>
    <head>
       <meta charset = "utf-8">
-      <title>尼蠔一絲閱讀器Index</title>
+      <title>尼蠔一絲閱讀器</title>
       <link rel="icon" href="icon128.ico" type="image/x-icon">
       <link href="https://fonts.googleapis.com/css?family=Noto+Serif+TC&display=swap" rel="stylesheet">
       <style type = "text/css">
@@ -87,6 +87,16 @@
         .sub:focus{
             outline: 1px #A67F78 solid;
         }
+        a{
+            color: #A67F78;
+            text-decoration: none;
+        }
+        /* a:hover{
+        } */
+        a:visited{
+            color: #A67F78;
+            text-decoration: none;
+        }
      </style>
 
    </head>
@@ -94,9 +104,14 @@
         <br><br>
        <div id = "divvv">
            <form method="POST" action={{ url_for('login') }}>
-               <span id = "tt">
-                   <img src= "logo.png"></img>
-                <br>尼蠔一絲閱讀器</span>
+                <span id = "tt">
+                    <a href={{ url_for('index') }}> 
+                        <img src= "logo.png"></img>
+                    </a>
+                    <br>
+                    <a href={{ url_for('index') }}> 尼蠔一絲閱讀器
+                    </a>
+                </span>
                <hr style= "border: 0px; background-color: #A67F78; height: 3px;">
                <!-- {% with messages = get_flashed_messages() %}
                 {% if messages %}
@@ -116,7 +131,7 @@
                     name= "password" required>
                 </label><br>
                 <label>
-                <input type="checkbox" class="check">
+                <input type="checkbox" class="check" name="rememberMe">
                 <!--
                 <input type="checkbox" class="check" value="#F1E0D6" id="rememberMe" checked>
                     <label for="rememberMe"></label>-->
