--- a/finalProject/templates_chiu/register_1.html
+++ b/finalProject/templates_chiu/register_1.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset = "utf-8">
-    <title>尼蠔一絲閱讀器Register</title>
+    <title>尼蠔一絲註冊</title>
     <link rel="icon" href="icon128.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif+TC&display=swap" rel="stylesheet">
     <style type = "text/css">
@@ -66,6 +66,16 @@
         .sub:focus{
             outline: 1px #A67F78 solid;
         }
+        a{
+            color: #A67F78;
+            text-decoration: none;
+        }
+        /* a:hover{
+        } */
+        a:visited{
+            color: #A67F78;
+            text-decoration: none;
+        }
     </style>
 </head>
 
@@ -77,7 +87,8 @@
                 <thead>
                     <tr id="tt">
                         <td width=50%>
-                            <img src= "logo.png"></img>
+                            <a href={{ url_for('index') }}> 
+                            <img src= "logo.png"></img></a>
                         </td>
                         <td style="padding-top: 10%; padding-right: 5%; padding-left: 10%; text-align: left;">尼蠔一絲<br>&nbsp&nbsp&nbsp註冊</td>
                     </tr>
@@ -127,12 +138,14 @@
                             placeholder="check password" required>
                         </td>
                     </tr>
+                </tbody>
+                <tfoot>
                     <tr>
-                        <td colspan="2"  style="padding-top: 20px; padding-bottom: 20px;">
+                        <td colspan="2" style="padding-top: 20px; padding-bottom: 20px;">
                             <input type="submit" name= "submit" value="註冊" class="sub">
                         </td>
                     </tr>
-                </tbody>
+                </tfoot>
             </table>
         </form>
     </div>
