--- a/finalProject/templates_chiu/myPage.html
+++ b/finalProject/templates_chiu/myPage.html
@@ -6,134 +6,7 @@
     <title>尼蠔一絲閱讀</title>
     <link rel="icon" href="icon128.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif+TC&display=swap" rel="stylesheet">
-    <style type = "text/css">
-    *{
-        font-family: 'Noto Serif TC', serif;
-      }
-        body{
-            background-color: #e1dcd9;
-            color: #A67F78;
-        }
-        .message
-        {
-            padding-left: 5%;
-            text-align: left;
-            color: red;
-        }
-        #divvv{
-            /* width: 60%; */
-            margin: 0px auto;
-            /* border: 3pt solid; */
-            text-align: center;
-            font-size: 20px;
-            background-color: #e1dcd9;
-            padding: 3%;
-            clear: both;
-            height: 400px;
-            overflow: scroll;
-        }
-        img{
-            width: 100px;
-            height: 100px;
-            float: left;
-            display: block;
-            margin-left: 10%;
-        }
-        #tt{
-            float: none;
-            font-size: 20px;
-        }
-        .in{
-            float: left;
-            margin-left: 10%;
-        }
-        input{
-            width: 90%;
-            height: 30px; font-size: 20px;
-            color: #A67F78;
-            border: #A67F78 1px solid; 
-        }
-        input:focus{
-            outline: 1px #A67F78 solid;
-        }
-        .option{
-            color: #A67F78;
-            border: #A67F78 0px solid;
-            background-color: whitesmoke;
-        }
-        .option:focus{
-            outline: 0px #A67F78 solid;
-        }
-        .sub{
-            float: none;
-            width: 100px;
-            height:auto;
-            border: 0px;
-            background-color: whitesmoke;
-        }
-        .sub:hover{
-            background-color: #F1E0D6;
-        }
-        .sub:focus{
-            outline: 1px #A67F78 solid;
-        }
-        a{
-            color: #A67F78;
-            text-decoration: none;
-        }
-        /* a:hover{
-        } */
-        a:visited{
-            color: #A67F78;
-            text-decoration: none;
-        }
-        table{
-            border-collapse: collapse;
-        }
-        tbody td{
-            border: #A67F78 1px solid;
-        }
-        hr{
-            border:0px;
-            background-color: #A67F78;
-            height: 3px;
-        }
-        #navPart{
-            background-color: #8f8681;
-            padding: 15px;
-        }
-        nav{
-            float:left;
-            background-color: #e1dcd9;
-            width: 150px;
-            margin-left: 3px;
-            margin-top: 1px;
-            text-align: center;
-            border: #8f8681 0px solid;
-        }
-        nav:hover{
-            background-color: #F1E0D6;
-        }
-        .chapTitle{
-            font-size: larger;
-            font-weight: bolder;
-        }
-        .chapContent{
-            text-align: left;
-        }
-        .feature{
-            width: 50px;
-            height: 50px;
-            border: 0px;
-            background-color: whitesmoke;
-        }
-        .feature:hover{
-            background-color: #F1E0D6;
-        }
-    </style>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js">
-    
-    </script> 
+    <link rel= "stylesheet" href= "myPageMain.css">
 </head>
 
 <body>
@@ -170,7 +43,9 @@
         <div style="padding-top: 10px; text-align:center">
             <input type="button" value="◀" class="feature">
             <input type="button" value="☖" class="feature">
+            <input type="button" value="－" class="feature">
             <input type="button" value="☰" class="feature">
+            <input type="button" value="＋" class="feature">
             <input type="button" value="★" class="feature">
             <input type="button" value="▶" class="feature">
         </div>
