--- a/finalProject/templates_chiu/register_1.html
+++ b/finalProject/templates_chiu/register_1.html
@@ -6,77 +6,8 @@
     <title>尼蠔一絲註冊</title>
     <link rel="icon" href="icon128.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif+TC&display=swap" rel="stylesheet">
-    <style type = "text/css">
-    *{
-        font-family: 'Noto Serif TC', serif;
-      }
-        body{
-            background-color: #e1dcd9;
-            color: #A67F78;
-        }
-        .message
-        {
-            padding-left: 5%;
-            text-align: left;
-            color: red;
-        }
-        #divvv{
-            width: 40%;
-            margin: 0px auto;
-            border: 3pt solid;
-            text-align: center;
-            font-size: 20px;
-        }
-        img{
-            width: 100%;
-            float: none;
-            display: block;
-            margin-left: 10%;
-        }
-        #tt{
-            float:left;
-            margin-right: 5%;
-            position: relative;
-            text-align: center;
-            font-size: 25px;
-        }
-        .in{
-            float: left;
-            margin-left: 10%;
-        }
-        input{
-            width: 90%;
-            height: 30px; font-size: 20px;
-            color: #A67F78;
-            border: #A67F78 1px solid; 
-        }
-        input:focus{
-            outline: 1px #A67F78 solid;
-        }
-        .sub{
-            float: none;
-            width: 100px;
-            height:auto;
-            border: 0px;
-            background-color: whitesmoke;
-        }
-        .sub:hover{
-            background-color: #F1E0D6;
-        }
-        .sub:focus{
-            outline: 1px #A67F78 solid;
-        }
-        a{
-            color: #A67F78;
-            text-decoration: none;
-        }
-        /* a:hover{
-        } */
-        a:visited{
-            color: #A67F78;
-            text-decoration: none;
-        }
-    </style>
+    <link rel= "stylesheet" href= "registerMain.css">
+
 </head>
 
 <body>
