--- a/finalProject/templates_chiu/myPage.html
+++ b/finalProject/templates_chiu/myPage.html
@@ -41,14 +41,18 @@
             </p>
         </div>
         <div style="padding-top: 10px; text-align:center">
-            <input type="button" value="◀" class="feature">
-            <input type="button" value="☖" class="feature">
-            <input type="button" value="－" class="feature">
-            <input type="button" value="☰" class="feature">
-            <input type="button" value="＋" class="feature">
-            <input type="button" value="★" class="feature">
-            <input type="button" value="▶" class="feature">
+            <input type="button" value="◀" class="feature" id="preChap">
+            <input type="button" value="☖" class="feature" id="goHome">
+            <input type="button" value="－" class="feature" id="fontSmall">
+            <input type="button" value="☰" class="feature" id="menu">
+            <input type="button" value="＋" class="feature" id="fontBig">
+            <input type="button" value="★" class="feature" id="addLike">
+            <input type="button" value="▶" class="feature" id="postChap">
         </div>
     </div>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js">
+    </script>
+    <script src="myPageMain.js">
+    </script> 
 </body>
 </html>
