--- a/finalProject/templates_chiu/test.html
+++ b/finalProject/templates_chiu/test.html
@@ -1,28 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel= "stylesheet" href= "SortBy.css">
-
+    <meta charset = "utf-8">
+    <title>tttesttt</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel= "stylesheet" href= "test.css">
 </head>     
 
 <body>
+    <button class="btn-2">註冊</button>
+    <!-- <input type="submit" value="登入" class="sub"> -->
+ 
     
-    <div class="center">
-        <select name="sources" id="sources" class="custom-select sources" placeholder="Source Type">
-            <option value="recent">最近閱讀</option>
-            <option value="longest">最舊閱讀</option>
-            <option value="byName">名稱</option>
-            <option value="favorite">我的最愛</option>
-            <option value="notEnd">未讀完</option>
-        </select>
-      </div>
-
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js">
-</script>
-<script src="SortBy.js">
-
-</script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js">
+    </script>
+    <script src="test.js">
+    </script>
 
 </body>
 </html>
