--- a/finalProject/templates_chiu/test.html
+++ b/finalProject/templates_chiu/test.html
@@ -8,10 +8,18 @@
 </head>     
 
 <body>
-    <button class="btn-2">註冊</button>
-    <!-- <input type="submit" value="登入" class="sub"> -->
+    <!-- particles.js container -->
+<div id="particles-js"></div>
+
+<!-- stats - count particles -->
+<div class="count-particles">
+  <span class="js-count-particles">--</span> particles
+</div>
+
+<!-- particles.js lib (JavaScript CodePen settings): https://github.com/VincentGarreau/particles.js -->
  
-    
+    <script type="text/javascript" src="https://github.com/VincentGarreau/particles.js">
+    </script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js">
     </script>
     <script src="test.js">
