--- a/finalProject/templates_chiu/test.html
+++ b/finalProject/templates_chiu/test.html
@@ -8,18 +8,14 @@
 </head>     
 
 <body>
-    <!-- particles.js container -->
-<div id="particles-js"></div>
+    <form action="#">
+        <div class="input-file-container">  
+          <input class="input-file" id="my-file" type="file">
+          <label tabindex="0" for="my-file" class="input-file-trigger">Select a file...</label>
+        </div>
+        <p class="file-return"></p>
+      </form>
 
-<!-- stats - count particles -->
-<div class="count-particles">
-  <span class="js-count-particles">--</span> particles
-</div>
-
-<!-- particles.js lib (JavaScript CodePen settings): https://github.com/VincentGarreau/particles.js -->
- 
-    <script type="text/javascript" src="https://github.com/VincentGarreau/particles.js">
-    </script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js">
     </script>
     <script src="test.js">
