--- a/finalProject/templates_chiu/myFavorate.html
+++ b/finalProject/templates_chiu/myFavorate.html
@@ -4,16 +4,16 @@
 <head>
     <meta charset = "utf-8">
     <title>尼蠔一絲的愛</title>
-    <link rel="icon" href="icon128.ico" type="image/x-icon">
+    <link rel="icon" href="./static/icon128.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif+TC&display=swap" rel="stylesheet">
-    <link rel= "stylesheet" href= "myBookCaseMain.css">
-    <link rel= "stylesheet" href= "SortBy.css">
+    <link rel= "stylesheet" href= "./static/myBookCaseMain.css">
+    <link rel= "stylesheet" href= "./static/SortBy.css">
     
 </head>
 
 <body>
     <a href={{ url_for('index') }}> 
-        <img src= "logo.png">
+        <img src= "./static/logo.png">
     </a>
     <div id = "tt">
         <br><br><br><br>&nbsp&nbsp尼蠔~ 一絲的愛
@@ -144,9 +144,20 @@
         </form>
     </div>
 
+    <br>
+    <footer>
+        <hr width="100%">
+        <p style="text-align: center;">
+            <br>Copyright&nbsp©<br>
+            2019 NTOU CS 2A<br>
+            00757015&nbspChiu + 00757051&nbspHuang<br>
+            - Look who's talking! -
+        </p>
+    </footer>
+
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js">
     </script>
-    <script src="SortBy.js">
+    <script src="./static/SortBy.js">
     </script> 
 </body>
 </html>
